# python-bibx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: index.md
docs/examples/: bit-pattern-savedrecs.txt  scopus.csv  scopus.ris  single-article.txt
src/bibx/: __init__.py  __main__.py  article.py  cli.py  collection.py  exceptions.py  tidyverbs.py  utils.py
src/bibx/_data/: scimago.csv  scimago.csv.zst
src/bibx/_entities/: article.py  collection.py  journal.py
src/bibx/_entities/collection_builders/: base.py  cross_ref.py  generic.py  isi.py  openalex.py  scopus.py  scopus_bib.py  scopus_ris.py  simple.py  wos.py
src/bibx/_entities/data_sets/: journal_data_set.py
src/bibx/_fuzz/: distance.py  journal_resolver.py  utils.py
src/bibx/_utils/: singleton_meta.py
src/bibx/algorithms/: __init__.py  preprocess.py  sap.py
src/bibx/builders/: __init__.py  base.py  openalex.py  scopus_bib.py  scopus_csv.py  scopus_ris.py  simple.py  wos.py
src/bibx/clients/: __init__.py  openalex.py
src/bibx/entities/: article.py  collection.py  collection_builders.py  collection_factory.py
src/bibx/entities/collection_builders/: base.py  cross_ref.py  generic.py  isi.py  scopus.py  simple.py
src/bibx/models/: __init__.py  article.py  collection.py
src/bibx/sources/: base.py  openalex.py  scopus_bib.py  scopus_csv.py  scopus_ris.py  simple.py  wos.py
src/bibx/utils/: isi_field_parsers.py
stubs/bibtexparser/: __init__.pyi  bparser.pyi
stubs/networkx/: __init__.pyi
stubs/networkx/algorithms/community/: louvain.pyi
stubs/networkx/classes/: reportviews.pyi
stubs/trailets/utils/warnings/: __init__.py
stubs/xlsxwriter/: __init__.pyi  worksheet.pyi
tests/: test_collection.py  test_sap.py
tests/algorithms/: test_sap.py
tests/builders/: test_scopus_csv.py
tests/entities/: test_collection.py  test_journal.py
tests/entities/collection_builders/: test_scopus.py  test_scopus_bib.py  test_scopus_ris.py  test_wos.py
tests/entities/data_sets/: test_journal_data_set.py
tests/fuzz/: test_distance.py  test_journal_resolver.py
