[project]
name = "bibx"
description = "Python bibliometric tools."
authors = [
    {name = "Core of Science Team", email = "technology@coreofscience.org"},
]
license = "MIT"
readme = "README.md"
keywords = [
    "bibliometrics",
    "science",
    "text mining",
]
dynamic = ["version"]
dependencies = [
    "bibtexparser~=1.4.0",
    "networkx~=3.0",
    "typer[all]~=0.9.0",
    "xlsxwriter~=3.2.0",
]
requires-python = ">=3.9"


[project.optional-dependencies]
dev = [
    "pytest~=7.2.0",
    "pre-commit~=2.20.0",
    "ruff~=0.3.3",
    "mypy~=1.9.0",
]

[project.scripts]
bibx = "bibx.cli:app"

[tool.ruff.lint]
select = ["I", "E", "F", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
mypy_path = "./stubs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bibx/__init__.py"
