[project]
name = "bibx"
description = "Python bibliometric tools."
authors = [
    { name = "Core of Science Team", email = "technology@coreofscience.org" },
]
license = "MIT"
readme = "README.md"
keywords = ["bibliometrics", "science", "text mining"]
dynamic = ["version"]
dependencies = [
    "bibtexparser~=1.4.0",
    "networkx~=3.0",
    "pydantic~=2.11.7",
    "requests~=2.32.5",
    "typer~=0.17.3",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "pre-commit~=4.3.0",
    "ruff~=0.12.11",
    "mypy~=1.17.1",
    "types-requests~=2.32.4.20250809",
    "ipython~=9.5.0",
]

[project.scripts]
bibx = "bibx.cli:main"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",
    "E",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TID", # flake8-tidy-imports
    "DTZ", # flake8-datetimez
    "ARG", # flake8-unused-arguments
    "PGH", # pygrep-hooks
    "PLC",
    "PLE",
    "PLR",
    "PLW", # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "A002",
    "B008",
    "D100",
    "D106",
    "D107",
    "D203",
    "D213",
    "D406",
    "D407",
    "DTZ003",
    "FBT001",
    "FBT003",
    "ISC001",
    "N815",
    "PGH003",
    "S101",
    "T201",
]

[tool.mypy]
mypy_path = "./stubs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bibx/__init__.py"

[tool.tox]
requires = ["tox>=4.24.2"]
env_list = ["3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
deps = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "mypy~=1.9.0",
    "types-requests>=2.32.0.20241016",
]
commands = [["ruff", "check"], ["pytest", "tests/"], ["mypy", "src/"]]
